# uCLbench

./: CMakeLists.txt
cllib/: CMakeLists.txt  clinfo.h
cmake/Modules/: FindOpenCL.cmake
